k8s_manifests/ingress-controller-traefik/ui/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: traefik
  annotations:
    certmanager.k8s.io/cluster-issuer: issuer-staging
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: route53
    traefik.ingress.kubernetes.io/auth-type: "basic"
    traefik.ingress.kubernetes.io/auth-secret: "traefik-basic-auth"
spec:
  rules:
    - host: raca-traefik.ballab.com
      http:
        paths:
          - backend:
              serviceName: traefik-web-ui
              servicePort: 80
  tls:
    - hosts:
        - raca-traefik.ballab.com
      secretName: raca-traefik-ballab-com-tls-staging
